crates/analyzer/tests/snapshots/errors__shadow_builtin_type.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"

---
error: type name conflicts with the type named "u256"
  ┌─ compile_errors/shadow_builtin_type.fe:1:6
  │
1 │ type u256 = u8
  │      ^^^^ `u256` is already defined

error: type name conflicts with the type named "String"
  ┌─ compile_errors/shadow_builtin_type.fe:2:6
  │
2 │ type String = u256
  │      ^^^^^^ `String` is already defined

error: type name conflicts with the type named "Map"
  ┌─ compile_errors/shadow_builtin_type.fe:3:6
  │
3 │ type Map = u256
  │      ^^^ `Map` is already defined

error: type name conflicts with the type named "bool"
  ┌─ compile_errors/shadow_builtin_type.fe:4:6
  │
4 │ type bool = u256
  │      ^^^^ `bool` is already defined

error: type name conflicts with the function named "keccak256"
  ┌─ compile_errors/shadow_builtin_type.fe:6:6
  │
6 │ type keccak256 = u8
  │      ^^^^^^^^^ `keccak256` is already defined

error: function parameter name `u8` conflicts with built-in type
   ┌─ compile_errors/shadow_builtin_type.fe:12:8
   │
12 │   fn f(u8: u256):
   │        ^^ `u8` is a built-in type

error: function parameter name `keccak256` conflicts with built-in function
   ┌─ compile_errors/shadow_builtin_type.fe:15:8
   │
15 │   fn g(keccak256: u8):
   │        ^^^^^^^^^ `keccak256` is a built-in function


